Fix: fixes sticking hover color on mobile

--- a/main.css
+++ b/main.css
@@ -53,9 +53,10 @@ button {
     background-color: lightgrey;
 }
 
-button:hover {
-    background-color: darkgrey;
-    
+@media (hover: hover) {
+    button:hover {
+        background-color: darkgrey;
+    }
 }
 
 button:active {
